Add excwptions, JPA for Item, User, Request