@@ -1,84 +1,104 @@
 package ru.practicum.shareit.item;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.exception.ItemNotFoundException;
+import ru.practicum.shareit.exception.UserNotFoundException;
+import ru.practicum.shareit.request.ItemRequest;
+import ru.practicum.shareit.request.ItemRequestRepository;
 import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.UserNotFoundException;
 import ru.practicum.shareit.user.UserRepository;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
+
     private final ItemRepository itemRepository;
     private final UserRepository userRepository;
+    private final ItemRequestRepository itemRequestRepository;
+    private final ItemMapper itemMapper;
 
     @Override
+    @Transactional
     public ItemDto createItem(ItemDto itemDto, Long ownerId) {
-        User user = userRepository.findById(ownerId)
+        log.info("Создание новой вещи для пользователя с id: {}", ownerId);
+
+        User owner = userRepository.findById(ownerId)
                 .orElseThrow(() -> new UserNotFoundException("Пользователь с id " + ownerId + " не найден"));
-        Item item = ItemMapper.toItem(itemDto, ownerId);
+
+        ItemRequest request = null;
+        if (itemDto.getRequestId() != null) {
+            request = itemRequestRepository.findById(itemDto.getRequestId())
+                    .orElse(null);
+        }
+
+        Item item = itemMapper.toEntity(itemDto, owner, request);
         Item savedItem = itemRepository.save(item);
-        return ItemMapper.toItemDto(savedItem);
+
+        log.info("Вещь создана с id: {}", savedItem.getId());
+        return itemMapper.toDto(savedItem);
+    }
+
+    @Override
+    @Transactional
+    public ItemDto updateItem(Long itemId, ItemDto itemDto, Long ownerId) {
+        log.info("Обновление вещи с id: {} для пользователя с id: {}", itemId, ownerId);
+
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new ItemNotFoundException("Вещь с id " + itemId + " не найдена"));
+
+        if (!item.getOwner().getId().equals(ownerId)) {
+            throw new SecurityException("Пользователь с id " + ownerId + " не является владельцем вещи");
+        }
+
+        itemMapper.updateEntity(itemDto, item);
+        Item updatedItem = itemRepository.save(item);
+
+        log.info("Вещь с id: {} обновлена", itemId);
+        return itemMapper.toDto(updatedItem);
     }
 
     @Override
     public ItemDto getItemById(Long itemId) {
+        log.info("Получение вещи с id: {}", itemId);
+
         Item item = itemRepository.findById(itemId)
-                .orElseThrow(() -> new RuntimeException("Вещь не найдена"));
-        return ItemMapper.toItemDto(item);
+                .orElseThrow(() -> new ItemNotFoundException("Вещь с id " + itemId + " не найдена"));
+
+        return itemMapper.toDto(item);
     }
 
     @Override
     public List<ItemDto> getItemsByOwner(Long ownerId) {
+        log.info("Получение всех вещей пользователя с id: {}", ownerId);
+
         if (!userRepository.existsById(ownerId)) {
             throw new UserNotFoundException("Пользователь с id " + ownerId + " не найден");
         }
-        return itemRepository.findByOwnerId(ownerId).stream()
-                .map(ItemMapper::toItemDto)
-                .toList();
-    }
 
-    @Override
-    public ItemDto updateItem(Long itemId, ItemDto itemDto, Long ownerId) {
-        Item item = itemRepository.findById(itemId)
-                .orElseThrow(() -> new RuntimeException("Вещь не найдена"));
-
-        if (!item.getOwnerId().equals(ownerId)) {
-            throw new ItemNotFoundException("Доступ запрещен: пользователь " + ownerId +
-                    " не является владельцем вещи " + itemId);
-        }
-
-        if (itemDto.getName() != null) {
-            item.setName(itemDto.getName());
-        }
-        if (itemDto.getDescription() != null) {
-            item.setDescription(itemDto.getDescription());
-        }
-        if (itemDto.getAvailable() != null) {
-            item.setAvailable(itemDto.getAvailable());
-        }
-
-        Item updatedItem = itemRepository.save(item);
-        return ItemMapper.toItemDto(updatedItem);
+        return itemRepository.findByOwnerIdOrderByIdAsc(ownerId).stream()
+                .map(itemMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<ItemDto> searchItems(String text) {
-        if (!StringUtils.hasText(text)) {
-            return List.of();
+        log.info("Поиск вещей по тексту: {}", text);
+
+        if (text == null || text.trim().isEmpty()) {
+            return Collections.emptyList();
         }
 
-        String searchText = text.toLowerCase();
-        return itemRepository.findAll().stream()
-                .filter(item -> Boolean.TRUE.equals(item.getAvailable()))
-                .filter(item ->
-                        item.getName().toLowerCase().contains(searchText) ||
-                                item.getDescription().toLowerCase().contains(searchText)
-                )
-                .map(ItemMapper::toItemDto)
-                .toList();
+        return itemRepository.searchAvailableItems(text.trim()).stream()
+                .map(itemMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
